--- a/virtualtri/Views/Shared/_Layout.cshtml
+++ b/virtualtri/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li><a href="http://virtualiron.teamorphans.com">View Another Team</a></li>
+                    <!--<li><a href="http://virtualiron.teamorphans.com">View Another Team</a></li>-->
 
                     @if (User.Identity.IsAuthenticated)
                     { 
