--- a/virtualtri/Views/MyActivities/Index.cshtml
+++ b/virtualtri/Views/MyActivities/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNet.Identity
+@using virtualtri.Entities
 @model virtualtri.Models.MyActivitiesViewModel
 
 @{
@@ -15,22 +16,30 @@
 
 <img src="@Model.GravatarLink" style="padding-top: 10px; padding-right: 20px; float: right" />
 <h2>My Activities</h2>
+<form method="post" action="~/Account/UpdateTargetDistance" novalidate="novalidate" class="bs-example form-horizontal">
+    @Html.AntiForgeryToken()
+    @Html.HiddenFor(model => model.Participant.Id, new { @Name = "Participant_Id" })
+    @Html.DropDownListFor(model => model.Participant.TargetDistance, new SelectList(Utils.Distances, "Distance", "Name"), new { @Name = "targetDistance" })
+     
+    <button type="submit" class="btn btn-xs btn-default">
+        <span class="glyphicon glyphicon-ok"></span>&nbsp;
+    </button>
+</form>
 
 
-
-<!-- show bar of progress -->
-<div class="col-lg-12">
-    <h3 id="progress-alternatives">Your Progress:</h3>
-    <div class="bs-example">
-        <div class="progress" style="margin-bottom: 9px;">
-            <div class="progress-bar progress-bar-Danger" style="width: @Model.PercentComplete%">@Model.TotalDistance miles</div>
+    <!-- show bar of progress -->
+    <div class="col-lg-12">
+        <h3 id="progress-alternatives">Your Progress:</h3>
+        <div class="bs-example">
+            <div class="progress" style="margin-bottom: 9px;">
+                <div class="progress-bar progress-bar-Danger" style="width: @Model.PercentComplete%">@Model.TotalDistance miles</div>
+            </div>
         </div>
     </div>
-</div>
 
-&nbsp;
-<!-- show add activity form -->
-@{Html.RenderPartial("NewActivityPartial", Model.NewActivity);}
+    &nbsp;
+    <!-- show add activity form -->
+    @{Html.RenderPartial("NewActivityPartial", Model.NewActivity);}
 
 
     <!-- show table of activities -->
